@@ -1,5 +1,7 @@
 *SVN*
 
+* Update to Prototype 1.5.0_rc0 [Sam Stephenson]
+
 * Fixed that the -r/--ruby path option of the rails command was not being respected #4549 [ryan.raaum@gmail.com]
 
 * Added that Dispatcher exceptions should not be shown to the user unless a default log has not been configured. Instead show public/500.html [DHH]
